feat: 发布 AI 导航并升级 JDK 17 安全基线